change deprecated url method to new uri method